--- a/css/style.css
+++ b/css/style.css
@@ -1,250 +1,78 @@
+@charset "UTF-8";
 /*ELIMINAR MARGENES POR DEFAULT EN TODOS LOS HTML*/
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
+
 /*FONDO DE LA PÁGINA*/
-body{
-    background-image: url("../imagenes/fondo.png");
+body {
+  background-image: url("../imagenes/fondo.png");
 }
+
 /*FONDO DEL HEADER*/
-header{
-    background-color: rgba(255, 255, 255, 0.558);
-}
-/*ENCABEZADO CENTRAL*/
-.logo{
-    display: flex;
-    justify-content:center;
-}
-.slogan{
-    display: flex;
-    justify-content: center;
-    font-size: 6px;
-    font-family: 'Oswald', sans-serif;
-}
-/*DISEÑO DE NAVBAR*/
-.container-fluid{
-    background-color: rgba(30, 31, 31, 0.088);
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-.container-fluid a{
-    display: flex;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 800;
-    font-size: 20px;
-    color: rgba(0, 0, 0, 0.878);
-    text-transform: uppercase;
-    text-decoration: none;
-    position: relative;
-    background-color: transparent;
-}
-/*TRANFORMACIONES Y TRANSICIONES DEL NAVBAR*/
-.inicio:hover{
-    transform: scale(1.2);
-    transition:all 0.5s;
-}
-.mediosdepago:hover{
-    transform: scale(1.2);
-    transition:all 0.5s;
-}
-.sale:hover{
-    transform: scale(1.2);
-    transition:all 0.5s;
-}
-.nosotros:hover{
-    transform: scale(1.1);
-    transition:all 0.3s;
-}
-
-/*DISEÑO DE TITULO PRINCIPAL*/
-.nuestros-productos{
-    display: flex;
-    justify-content: center;
-    background-color: rgba(255, 240, 240, 0.523);
-    font-family: 'Oswald', sans-serif;
-    font-weight: 800;
-    font-size: 20px;
-    color: rgba(0, 0, 0, 0.84);
-    text-transform: uppercase;
-    text-decoration: none;
-    position: relative;
-}
-
-/*(TITULO) PRODUCTOS*/
-.productos{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    background-color: rgba(67, 41, 93, 0.072);
-    position: relative;
-    flex-wrap: wrap;
-    padding: 50px;
-}
-
-.producto{
-    text-align: center;
-    background-color: rgba(232, 220, 232, 0.175);
-    padding: 10px;
-    height: 150;
-    border-radius: 5%;
+header {
+  background-color: rgba(255, 255, 255, 0.558);
 }
 
 /*IMAGENES DE LOS PRODUCTOS*/
-.producto-blanco{
-    display: flex;
-    justify-content: space-around;
-    background-color: rgba(58, 58, 58, 0.774);
-    display: flex;
-    border: rgba(255, 255, 255, 0.664) 8px outset;
-    height: 299px;
-    width: 215px;
-    margin: 50px auto;
-    flex-wrap: wrap;
+.producto-blanco {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgba(58, 58, 58, 0.774);
+  display: flex;
+  border: rgba(255, 255, 255, 0.664) 8px outset;
+  height: 299px;
+  width: 215px;
+  margin: 50px auto;
+  flex-wrap: wrap;
 }
-/*NOMBRE GENERAL DE PRODUCTOS*/
 
-.producto-informacion{
-    background-color: rgba(34, 39, 39, 0.604);
-    display: flex;
-    justify-content: space-around;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 800;
-    font-size: 13px;
-    color: rgba(255, 255, 255, 0.745);
-    text-transform: uppercase;
-    text-decoration: none;
+/*NOMBRE GENERAL DE PRODUCTOS*/
+.producto-informacion {
+  background-color: rgba(34, 39, 39, 0.604);
+  display: flex;
+  justify-content: space-around;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 800;
+  font-size: 13px;
+  color: rgba(255, 255, 255, 0.745);
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
 /*(TRANSICIONES) FOTOS DE PRODUCTOS*/
-
-.producto-blanco:hover{
-    transform: scale(1.2);
-    transition:all 1.5s;
-    background-color: transparent;
+.producto-blanco:hover {
+  transform: scale(1.2);
+  transition: all 1.5s;
+  background-color: transparent;
 }
 
-/*(DISEÑO Y TRANSICIONES) PIE DE PAGINA*/
-
-.footer{
-    display: flex;
-    justify-content: center;
-    background-color: rgba(19, 16, 18, 0.687);
-}
-
-.ig:hover{
-    transform: scale(1.2);
-    transition:all 0.5s;
-    transform: translateY(-10px)
-}
-
-.maps:hover{
-    transform: scale(1.2);
-    transition:all 0.5s;
-    transform: translateY(-20px)
-}
-
-.fb:hover{
-    transform: scale(1.2);
-    transition:all 0.5s;
-    transform: translateY(-10px);
-}
-
-
-.whats-container{
-    display: flex;
-    justify-content:end;
-    width: 100%;
-    position: fixed;
-    top: 450px;
-    bottom: 100%;
-    flex-wrap: wrap;
-}
-
-.whats:hover{
-    transform: scale(1.2);
-    transition:all 0.5s;
-}
-
-.container{
-    display: flex;
-    justify-content: center;
-    background-color: rgba(255, 240, 240, 0.523);
-    font-family: 'Oswald', sans-serif;
-    font-weight: 800;
-    font-size: 80px;
-    color: rgba(0, 0, 0, 0.84);
-    text-transform: uppercase;
-    text-decoration: none;
-    position: relative;
-    
-}
-
-
-/*SECCION: NOSOTROS.HTML - TITULO*/
-.info{
-    display: flex;
-    justify-content: center;
-    background-color: rgba(255, 240, 240, 0.523);
-    font-family: 'Oswald', sans-serif;
-    font-weight: 100;
-    font-size: 90px;
-    color: rgba(0, 0, 0, 0.84);
-    text-transform: uppercase;
-    text-decoration: none;
-    position: relative;
-    
-  }
-
-/*SECCION: NOSOTROS.HTML - DISEÑO PARRAFO*/
-.parrafo{
-    font-family: 'Oswald', sans-serif;
-    display: flex;
-    text-align: center;
-    font-weight: 100;
-    font-size: 30px;
-    text-transform:initial;
-    padding: 10%;
-}
-
-/*TRANSFORMACIONES Y TRANSICIONES DEL PARRAFO*/
-.parrafo:hover{
-    transform: scale(1.2);
-    transition:all 0.5s;
-    animation: changeColor 4s;
-    }
-    @keyframes changeColor{
-    0% {
-    Background-color: violet;
-    }
-    50% {
-    Background-color: rgba(191, 58, 153, 0.394);
-    }
-    100% { 
-    Background-color: rgb(227, 158, 203);
-    }
-}
 /* SECCION: MDP.HTML - TITULO PRINCIPAL*/
-.mdp{
-    display: flex;
-    justify-content: center;
-    background-color: rgba(255, 240, 240, 0.523);
-    font-family: 'Oswald', sans-serif;
-    font-weight: 800;
-    font-size: 20px;
-    color: rgba(0, 0, 0, 0.84);
-    text-transform: uppercase;
-    text-decoration: none;
-    position: relative;
+.mdp {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(255, 240, 240, 0.523);
+  font-family: "Oswald", sans-serif;
+  font-weight: 800;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.84);
+  text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
 }
 
-.carousel-inner{
-    padding: 10%;
+.slogan {
+  display: flex;
+  justify-content: center;
+  font-size: 6px;
+  font-family: "Oswald", sans-serif;
 }
 
+/*
 .productos-femeninos{
     display: flex;
     justify-content: center;
-}
+} */
+
+/*# sourceMappingURL=style.css.map */
