Agregando listas, y nuevos html

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,19 +1,14 @@
-<<<<<<< HEAD
+@import '../base/colors';
+@import '../base/fonts';
 /*FONDO DEL HEADER*/
 header{
-    background-color: rgba(255, 255, 255, 0.558);
-}
-=======
-@import '../base/listas';
-header{
-    background-color: nht($colores,1);
+    background-color: nth($colores,1);
     .logo{
         .slogan {
            display: flex;
            justify-content: center;
            font-size: 6px;
-           font-family: nht($fuentes,1);
+           font-family: nth($fuentes,1);
         }
     }
 }
->>>>>>> aca2b60c0a4f792cb5ee6581ef9c6365ac638d13
