--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,8 +1,8 @@
-@import '../base/listas';
+@import '../base/colors';
 footer{
     display: flex;
     justify-content: center;
-    background-color:nth($colores, 4)}
+    background-color:nth($colores, 1)}
 .ig:hover{
     transform: scale(1.2);
     transition:all 0.5s;
