--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,6 +1,7 @@
+@import '../base/colors';
 /*DISEÑO DE NAVBAR*/
 .container-fluid{
-    background-color: rgba(30, 31, 31, 0.088);
+    background-color:nth($colores, 2);
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -11,7 +12,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 800;
     font-size: 20px;
-    color: rgba(0, 0, 0, 0.878);
+    color:nth($colores,3);
     text-transform: uppercase;
     text-decoration: none;
     position: relative;
