--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,32 +1,21 @@
-<<<<<<< HEAD
+*{
+    margin: 0;
+    padding: 0;
+}
+
 @import 'components/body';
 @import 'components/footer';
 @import 'components/header';
 @import 'components/logo';
-@import 'components/main';
+@import 'components/mdp';
 @import 'components/navbar';
+@import 'components/nosotros';
 @import 'components/nuestros-productos';
 @import 'components/producto-blanco';
 @import 'components/sec-mdp';
 @import 'components/sec-nosotros';
 @import 'components/slogan';
-/*
-.productos-femeninos{
-    display: flex;
-    justify-content: center;
-} */
-=======
+@import '../scss/base/colors';
+@import '../scss/base/fonts';
+@import '../scss/components/productos-masculinos';
 
-*{
-    margin: 0;
-    padding: 0;
-}
-@import '../scss/base/listas';
-@import '../scss/components/header';
-@import '../scss/components/body';
-@import '../scss/components/footer';
-@import '../scss/components/navbar';
-@import '../scss/components/main';
-@import '../scss/components/nosotros';
-@import '../scss/components/mdp';
->>>>>>> aca2b60c0a4f792cb5ee6581ef9c6365ac638d13
