--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,4 +18,5 @@
 @import '../scss/base/colors';
 @import '../scss/base/fonts';
 @import '../scss/components/productos-masculinos';
+@import '../scss/components/productos-femeninos';
 
