--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@
 @import 'components/sec-mdp';
 @import 'components/sec-nosotros';
 @import 'components/slogan';
-@import '../scss/base/colors';
-@import '../scss/base/fonts';
-@import '../scss/components/productos-masculinos';
-@import '../scss/components/productos-femeninos';
+@import 'scss/base/colors';
+@import 'scss/base/fonts';
+@import 'scss/components/productos-masculinos';
+@import 'scss/components/productos-femeninos';
